@@ -140,9 +140,9 @@ class TestInfo(tests.TestCaseWithTransport):
             expected = None
             if key in ('dirstate', 'dirstate-tags', 'dirstate-with-subtree',
                 'knitpack-experimental', 'knitpack-subtree-experimental',
-                'rich-root'):
+                'rich-root', 'rich-root-pack'):
                 expected = 'dirstate or dirstate-tags or'\
-                    ' knitpack-experimental or rich-root'
+                    ' knitpack-experimental or rich-root or rich-root-pack'
             if key in ('knit', 'metaweave'):
                 expected = 'knit or metaweave'
             self.assertCheckoutDescription(key, expected)
